Fixed Jumbotron, ran code through W3 validator(no Errors remaining), renamed images, and aligned code better

--- a/css/cart.css
+++ b/css/cart.css
@@ -11,3 +11,8 @@
 .lh-condensed { 
     line-height: 1.25; 
 }
+
+.pk-img {
+    width: 80px;
+    height: 60px;
+}
